RESOLVED FIXED137144
Fix typo in YARR at BOL check
https://bugs.webkit.org/show_bug.cgi?id=137144
Summary Fix typo in YARR at BOL check
David Binderman
Reported 2014-09-26 00:28:38 PDT
webkitgtk-2.5.90/Source/JavaScriptCore/yarr/YarrPattern.cpp:300]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses. Source code is if (!m_alternative->m_terms.size() & !m_invertParentheticalAssertion) { Maybe if (!m_alternative->m_terms.size() && !m_invertParentheticalAssertion) { was intended.
Attachments
proposed patch (1.21 KB, patch)
2014-09-26 05:28 PDT, Peter Varga
no flags
Csaba Osztrogonác
Comment 1 2014-09-26 04:48:18 PDT
The code is still in trunk, cc-ing YARR experts.
Peter Varga
Comment 2 2014-09-26 05:28:07 PDT
Created attachment 238708 [details] proposed patch
Darin Adler
Comment 3 2014-09-26 10:13:27 PDT
Comment on attachment 238708 [details] proposed patch OK to make this change, but it was OK to use & here since both values were booleans and the second expression had no side effect.
WebKit Commit Bot
Comment 4 2014-09-26 10:50:02 PDT
Comment on attachment 238708 [details] proposed patch Clearing flags on attachment: 238708 Committed r174012: <http://trac.webkit.org/changeset/174012>
WebKit Commit Bot
Comment 5 2014-09-26 10:50:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.