Fix typo in YARR at BOL check https://bugs.webkit.org/show_bug.cgi?id=137144

Reviewed by Darin Adler.

* yarr/YarrPattern.cpp: replace bitwise and operator by logical and
(JSC::Yarr::YarrPatternConstructor::assertionBOL):


Canonical link: https://commits.webkit.org/154962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174012 268f45cc-cd09-0410-ab3c-d52691b4dbfc